<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialerfrag"
    tools:context=".HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical">



            <TextView
                android:id="@+id/dialview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="15dp"
                android:text="Dial"
                android:paddingTop="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/dialer_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/yellow_highsat"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/whitebground"
                android:text="Mood : Analysing"
                android:id="@+id/moodLabel"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="5"
                android:columnCount="3"
                android:alignmentMode="alignMargins"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/d1"
                    android:text="@string/dial_one"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d2"
                    android:text="@string/dial_two"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d3"
                    android:text="@string/dial_three"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d4"
                    android:text="@string/dial_four"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d5"
                    android:text="@string/dial_five"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d6"
                    android:text="@string/dial_six"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d7"
                    android:text="@string/dial_seven"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d8"
                    android:text="@string/dial_eight"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d9"
                    android:text="@string/dial_nine"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/ac_dial"
                    android:text="@string/dial_ac"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/d0"
                    android:text="@string/dial_zero"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/backspace"
                    android:text="@string/dial_backspace"
                    style="@style/dialerButton"/>
                <Button
                    android:id="@+id/dialnow"
                    android:text="@string/dialnow_emoji"
                    android:layout_columnSpan="3"
                    style="@style/dialnowButton" />
            </GridLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>